Yet more data components, removed ItemNBTHelper